gccida/g2/dw2_asm_output_nstring
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_nstring/src/dwarf2asm.c:749:7: error: use of undeclared identifier 'byte_664720'
v11 = byte_664720[v10]; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_nstring/src/dwarf2asm.c:812:7: error: use of undeclared identifier 'byte_664720'
v16 = byte_664720[( unsigned int)v15]; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_nstring/src/dwarf2asm.c:849:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v14] & 0x10) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_nstring/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_nstring/src/dwarf2asm.c:862:54: error: use of undeclared identifier 'stru_6F109F'
fprintf( asm_out_file, "\\0\"\t%s ", ( const char *)&stru_6F109F._IO_save_end + 7); 
                                                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_nstring/src/obj/dwarf2asm.o] Error 1
